fixed double-jumping

--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -41,3 +41,9 @@ body{
 .center{
 	justify-content: center;
 }
+
+.piece{
+	line-height: 50px;
+	text-align: center;
+	color: white;
+}
